# Final_Interface

./: CMakeLists.txt  main.cpp
include/: Extract.h  LogisticRegression.h  common.h  md5.h
include/tensorflow/contrib/cloud/kernels/: bigquery_table_partition.pb.h
include/tensorflow/contrib/makefile/downloads/protobuf/: config.h
include/tensorflow/core/protobuf/: eager_service.grpc.pb.h  master.pb.h  worker.pb.h
include/tensorflow/lite/: interpreter.h
src/: Extract.cpp  LogisticRegression.cpp  md5.cpp
wrapper/: CMakeLists.txt  svipAISDK_V3.h  svip_action.cpp  svip_action.h
